# TinyRenderer.rs

./: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
js/: index.js
src/: common.rs  engine.rs  get.rs  lib.rs  matrix.rs  obj.rs  pipeline.rs  run.rs  scene.rs  texture.rs
static/: index.html
