# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"]  }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen-futures = "0.4.5"
futures = "0.1"

[dependencies.web-sys]
version = "0.3.0"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'console',
  'HtmlImageElement',
  'Blob'
]
